force-app/main/default/objects/leaseworks__Dimension_Application__c/leaseworks__Dimension_Application__c.object-meta.xml
<CustomObject>
    <label>Lease Dimensions</label>
    <nameField>
        <label>Contract Dimensions Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lease Dimensions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>