force-app/main/default/objects/leaseworks__Dimension_Application__c/fields/leaseworks__Dimension_Name__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Dimension_Name__c</fullName>
    <formula>leaseworks__Dimension_Value__r.leaseworks__Dimension__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dimension Name</label>
    <type>Text</type>
</CustomField>