force-app/main/default/objects/leaseworks__Dimension_Application__c/fields/leaseworks__Dimension_Required__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Dimension_Required__c</fullName>
    <description>Created for #DimensionStory</description>
    <inlineHelpText>Indicates that the dimension value is required at the transaction and journal level.</inlineHelpText>
    <label>Dimension Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>