force-app/main/default/objects/leaseworks__Dimension_Application__c/fields/leaseworks__Inactive__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Inactive__c</fullName>
    <formula>leaseworks__Dimension_Value__r.leaseworks__Inactive__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inactive</label>
    <type>Checkbox</type>
</CustomField>