force-app/main/default/objects/leaseworks__Dimension_Application__c/fields/leaseworks__Lease__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Lease__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Lease to which this dimension is applicable</inlineHelpText>
    <label>Contract</label>
    <referenceTo>leaseworks__Lease__c</referenceTo>
    <relationshipLabel>Lease Dimensions</relationshipLabel>
    <relationshipName>Dimension_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>