force-app/main/default/objects/leaseworks__Dimension_Application__c/validationRules/leaseworks__Dimension_Value_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__Dimension_Value_is_required</fullName>
    <active>true</active>
    <description>#DimensionStory - If &apos;Default Value Required&apos; is marked as Yes, then &apos;Dimension Value&apos; must be filled.</description>
    <errorConditionFormula>false
    /*!$Setup.LeaseWorksSettings__c.Disable_All_Triggers__c &amp;&amp; ISPICKVAL(Default_Value_Required__c,&apos;Yes&apos;) &amp;&amp; ISBLANK(Dimension_Value__c) &amp;&amp;  NOT( ISBLANK( Lease__r.Accounting_Setup_P__c ))*/</errorConditionFormula>
    <errorDisplayField>leaseworks__Dimension_Value__c</errorDisplayField>
    <errorMessage>A default dimension value is required if &apos;Default Value Required&apos; is marked as Yes.</errorMessage>
</ValidationRule>