force-app/main/default/objects/leaseworks__Dimension_Application__c/validationRules/leaseworks__Std_Dimension_Field_Change.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__Std_Dimension_Field_Change</fullName>
    <active>true</active>
    <description>#Dimensionstory - Under Std Dimension Application we should stop the user from editing any of the field values (Lease, Dimension Application Name, Dimension Value,  Default Value Required, Dimension Required)</description>
    <errorConditionFormula>!$Setup.leaseworks__LeaseWorksSettings__c.leaseworks__Disable_All_Triggers__c &amp;&amp; leaseworks__Dimension__r.leaseworks__Is_Standard__c  &amp;&amp;  (ISCHANGED(Name) || ISCHANGED(leaseworks__Lease__c) || ISCHANGED(leaseworks__Dimension_Value__c) || ISCHANGED(leaseworks__Default_Value_Required__c) || ISCHANGED(leaseworks__Dimension_Required__c))</errorConditionFormula>
    <errorMessage>Standard dimensions cannot be manually created/edited or deleted.</errorMessage>
</ValidationRule>